--- a/app/globals.css
+++ b/app/globals.css
@@ -1,42 +1,132 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
+/* body header */
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+header,
+main,
+footer {
+  max-width: 1000px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 1rem;
 }
 
-a {
-  color: inherit;
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+}
+
+header div:first-of-type a {
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+.goto {
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+}
+
+.goto a:first-of-type {
+  display: none;
+}
+
+.full-line {
+  height: 1px;
+  background: var(--background-muted);
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  flex: 1;
+}
+
+/* home page */
+
+/* dashboard page */
+
+/* login */
+
+.login {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1rem;
+  max-width: 600px;
+  width: 100%;
+  margin: 0 auto;
+  flex: 1;
+  padding: 4rem 0;
+}
+
+.login > div:last-of-type {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+/* footer */
+
+.hard-line {
+  height: 1px;
+  background: var(--border-secondary);
+}
+
+.footer-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 1rem;
+  padding: 4rem 1rem;
+}
+
+.footer-content > div:first-of-type {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.footer-content > div:first-of-type div {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.footer-content > div:last-of-type div {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+/* media queries */
+
+@media (min-width: 640px) {
+  .goto a:first-of-type {
+    display: block;
+  }
+
+  main {
+    gap: 3rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .footer-content {
+    flex-direction: row;
+  }
+
+  .footer-content > div:last-of-type {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    align-items: flex-end;
   }
 }
