--- a/app/fanta.css
+++ b/app/fanta.css
@@ -33,9 +33,10 @@
   --color-compliment: "";
   --color-gradient: "";
   --color-muted: ;
-  /* --color-link: #2563eb;
-  --color-link-transparent: rgba(37, 99, 235, 0.1); */
-  --color-link: #16a34a;
+  /* --color-link: #2563eb; */
+  /* --color-link-transparent: rgba(37, 99, 235, 0.1); */
+  /* --color-link: #16a34a; */
+  --color-link: #12873d;
   --color-link-transparent: #16a34a20;
 
   --color-success: "";
@@ -136,7 +137,6 @@ body {
 
 /* Special */
 .text-gradient {
-  /* font-weight: 800; */
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
   background-image: linear-gradient(
@@ -165,6 +165,7 @@ button {
 h1 {
   font-size: 1.875rem;
   line-height: 2.25rem;
+  font-weight: 800;
 }
 
 h2 {
